fix logout button align and post btn align

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -17,13 +17,15 @@
   background-color: #fff;
   color: #223354 !important;
   max-width: 640px !important;
-  width: 96%;
+  width: 90%;
   max-width: 700px !important;
 
   border: 1px solid #dbdbdb;
-  -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+  /* -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
     0 1px 3px 1px rgb(60 64 67 / 15%);
-  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%); */
+  padding: 10px 5px;
+  border-radius: 20px;
 }
 
 .postTop {
