--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -4,6 +4,25 @@
   flex: calc(1 / 3);
 
 
+
+}
+
+
+.rightbarHome {
+  width: 30vw;
+  flex: calc(1 / 3);
+
+  height: calc(100vh - 190px);
+  position: fixed;
+  top: 15%;
+  left: 62%;
+
+}
+
+.rightbarHomeWrapper {
+  position: relative;
+  top: 20%;
+  left: 5%;
 }
 
 .homewrapper {
